:bento: multiple tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"cross-env": "^5.2.0",
+		"glslify": "^7.0.0",
 		"gsap": "^2.0.2",
 		"imagesloaded": "^4.1.4",
 		"in-viewport": "^3.6.0",
@@ -19,6 +20,7 @@
 		"smoothscroll-polyfill": "^0.4.4",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.2",
+		"three": "^0.114.0",
 		"vue-marquee-text-component": "^1.1.1"
 	},
 	"devDependencies": {
