:bento: add fonts and structure

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.2",
 		"three": "^0.114.0",
-		"vue-marquee-text-component": "^1.1.1"
+		"vue-marquee-text-component": "^1.1.1",
+		"vue-masonry": "^0.11.8"
 	},
 	"devDependencies": {
 		"nodemon": "^1.11.0"
